kube/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot-wpp
spec:
  selector:
    matchLabels:
      app: bot-wpp
  replicas: 2
  template:
    metadata:
      labels:
        app: bot-wpp
    spec:
      containers:
        - name: bot-wpp
          image: qzzdocker24/bot-wpp:dev
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
          ports:
            - containerPort: 8080
