kube/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bot-wpp
spec:
  selector:
    app: bot-wpp
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
