kube/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health
  name: rewrite
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: api-bot.denjidev.com
      http:
        paths:
          - path: /api/v1(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: bot-wpp
                port:
                  number: 80
